# working

./: index.html  main.js
HW08/: hw.py  models.py  seed.py
HW08_2/: consumer.py  models.py  producer.py
PythonProject10HW/: pyproject.toml
PythonProject11HW/: main.py  pyproject.toml
PythonProject11HW/migrations/: env.py
PythonProject11HW/migrations/versions/: d305d2eb7487_init.py
PythonProject11HW/src/conf/: config.py
PythonProject11HW/src/database/: db.py
PythonProject11HW/src/entity/: models.py
PythonProject11HW/src/repository/: contacts.py
PythonProject11HW/src/routes/: contacts.py
PythonProject11HW/src/schemas/: contact.py
PythonProject12HW/: main.py  (+1 more)
PythonProject13HW/: .env  .env.example  main.py  pyproject.toml
PythonProject13HW/migrations/versions/: 42b5fd2c3406_init.py
PythonProject13HW/postgres-data/: postmaster.pid
PythonProject13HW/postgres-data/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2841  pg_internal.init
PythonProject13HW/postgres-data/base/16384/: 1247  1249  1259  1259_fsm  1259_vm  16389  16392  16395  16400  16401  16403  16405  16407  16408  16413  16414  16416  16423  16424  16425  2224  2579  2604  2606  2608  2610  2610_fsm  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+10 more)
PythonProject13HW/postgres-data/base/5/: pg_internal.init
PythonProject13HW/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
PythonProject13HW/src/conf/: config.py
PythonProject13HW/src/entity/: models.py
PythonProject13HW/src/repository/: users.py
PythonProject13HW/src/routes/: auth.py  contacts.py  users.py
PythonProject13HW/src/schemas/: user.py
PythonProject13HW/src/services/: auth.py  email.py
PythonProject13HW/src/services/templates/: request_reset_password.html  reset_password.html  verify_email.html
pythonProject07HW/: config.ini  main.py  pyproject.toml
pythonProject07HW/conf/: db.py  models.py
pythonProject07HW/migrations/: env.py
pythonProject07HW/migrations/versions/: 70da4dbf16cf_init.py
pythonProject07HW/seeds/: init.py
(+50 files in other folders)
