[project]
name = "pythonproject13hw"
version = "0.1.0"
description = ""
authors = [
    {name = "nik231",email = "nnizalov@gmail.com"}
]
readme = "README.md"
requires-python  = ">=3.13,<4.0"

dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "python-jose (>=3.5.0,<4.0.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "bcrypt (==4.3.0)",
    "passlib[bcrypt] (>=1.7.4)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi-mail (>=1.5.7,<2.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "fastapi-limiter (>=0.1.6,<0.2.0)",
    "redis (>=7.0.1,<8.0.0)",
    "cloudinary (>=1.44.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

